# models/session.js
@@ -1,9 +1,10 @@
 const sessionSchema = {
-    authorID: 'string',
-    title: 'string',
-    description: 'string',
-    date: 'date',
+    sessionId: 'string',
+    topic: 'string',
+    time: 'date',
     participants: 'array'
 };
 
 module.exports = sessionSchema;
+
+//Sessions (SessionId, topic, time, participants)
