# models/user.js
@@ -1,10 +1,10 @@
-const userSchema = {
-    provider: 'string',      
-    providerId: 'string',    
-    authorID: 'string',      
+const userSchema = {  
+    authorId: 'string',
     name: 'string',
     email: 'string',
     subjects: 'array'     
 };
 
 module.exports = userSchema;
+
+//Users (authorId, name, email, subjects)
